Fix scroll overflow behavior in layout aside

--- a/docs/src/styles/_layout-aside.scss
+++ b/docs/src/styles/_layout-aside.scss
@@ -13,17 +13,13 @@
   max-width: css.get("layout", "drawer-width");
   opacity: 0;
   outline: none;
-  overflow: hidden auto;
-  padding: css.get("layout", "drawer-padding");
   position: fixed;
-  scroll-behavior: smooth;
-  scrollbar-color: palette.get("primary", 50, 0%) css.get("background");
   transform: translate(100%);
   transition:
     opacity 0.5s,
     transform 0.25s ease;
   visibility: hidden;
-  width: calc(100% - 4rem);
+  width: calc(100% - 4.5rem);
   z-index: 100;
 
   &.is-opened,
@@ -45,6 +41,16 @@
   }
 }
 
+.layout-aside__content {
+  scrollbar-color: palette.get("primary", 50, 0%) css.get("background");
+  height: 100%;
+  overflow: hidden auto;
+  overscroll-behavior: contain;
+  padding: css.get("layout", "drawer-padding");
+  position: absolute;
+  width: 100%;
+}
+
 /**
  * Inline aside
  */
@@ -64,7 +70,7 @@
     z-index: 2;
   }
 
-  .layout-aside__container {
+  .layout-aside__content {
     height: 100vh;
     overflow: hidden auto;
     padding: calc(css.get("layout", "navibar-height") + 2rem) css.get("layout", "aside-padding") calc(css.get("layout", "footer-height") + 8rem);
